// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TWAMM #cancelLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 39518,
}
`;

exports[`TWAMM #claimEarnings gas 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 264403,
}
`;

exports[`TWAMM #executeTWAMMOrders gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 355918,
}
`;

exports[`TWAMM #submitLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 121558,
}
`;
